--- a/image_project.ipynb
+++ b/image_project.ipynb
@@ -277,11 +277,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getThreshold(y_pred,y_true,threshold_interval):\n",
+    "    #manually select threshold according to f1 score on each label\n",
+    "    #threshold with highest score wins\n",
     "    threshold = np.arange(0,1,threshold_interval)\n",
     "\n",
     "    best_threshold = np.zeros(y_true.shape[1])\n",
@@ -2707,29 +2709,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/5\n",
-      "20000/20000 [==============================] - 846s - loss: 0.0331   \n",
-      "Epoch 2/5\n",
-      "20000/20000 [==============================] - 767s - loss: 0.0314   \n",
-      "Epoch 3/5\n",
-      "20000/20000 [==============================] - 1020s - loss: 0.0289  \n",
-      "Epoch 4/5\n",
-      "20000/20000 [==============================] - 879s - loss: 0.0278   \n",
-      "Epoch 5/5\n",
-      "20000/20000 [==============================] - 954s - loss: 0.0272   \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = cdn\n",
-    "cdn.fit(X,y,epochs=5,batch_size=64,verbose=0)\n",
+    "model.fit(X,y,epochs=5,batch_size=64,verbose=0)\n",
     "model.save('model.h5')"
    ]
   },
@@ -2758,9 +2743,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://www.cs.helsinki.fi/u/mvsjober/misc/dl2017-image-test.zip\n",
+      "69378048/70274086 [============================>.] - ETA: 0s"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'./test/dl2017-image-test.zip'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "testset_path = 'test/'\n",
     "\n",
@@ -2771,11 +2775,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5000, 32, 32, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "img_test_list = [testset_path+\"images/\"+\"im\"+str(x)+\".jpg\" for x in range(20001,250001)]\n",
+    "img_test_list = [testset_path+\"images/\"+\"im\"+str(x)+\".jpg\" for x in range(20001,25001)]\n",
     "X_test = np.stack([image_load_func(file) for file in img_test_list])\n",
     "print(X_test.shape)"
    ]
@@ -2799,41 +2811,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best threshold for class 0 ： 0.028\n",
+      "Best threshold for class 1 ： 0.508\n",
+      "Best threshold for class 2 ： 0.05\n",
+      "Best threshold for class 3 ： 0.356\n",
+      "Best threshold for class 4 ： 0.131\n",
+      "Best threshold for class 5 ： 0.61\n",
+      "Best threshold for class 6 ： 0.498\n",
+      "Best threshold for class 7 ： 0.675\n",
+      "Best threshold for class 8 ： 0.14\n",
+      "Best threshold for class 9 ： 0.576\n",
+      "Best threshold for class 10 ： 0.273\n",
+      "Best threshold for class 11 ： 0.094\n",
+      "Best threshold for class 12 ： 0.403\n",
+      "Best threshold for class 13 ： 0.428\n",
+      "5000/5000 [==============================] - 81s    \n"
+     ]
+    }
+   ],
    "source": [
     "model = cdn\n",
     "y_pred_raw = model.predict(X,batch_size=32, verbose=1)\n",
     "threshold=getThreshold(y_pred_raw,y,0.001)\n",
-    "y_pred = 1*(y_pred_raw>threshold)    \n",
+    "y_test_pred_raw = model.predict(X_test,batch_size=32, verbose=1)\n",
+    "y_test_pred = 1*(y_test_pred_raw>threshold)    \n",
     "#print(\"F1 score :\",f1_score(y, y_pred, average='micro'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "baby\n",
+      "female\n",
+      "people\n",
+      "portrait\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFM5JREFUeJztncuPHOd1xW89uqt7unt63uSQHD5FUuJLkhPbgmNA9ENO\nbCPIJtllE8DrLPJXZJlVNlkZyCZOgDhBAguOAwWCJSehJDuiEFEiTXH4muFw+v2q6qrqyiYLB/jO\nTZNO2kHu+S3r4uuqrq4zH1Bnzr1eURRCCLGH/6u+AELIrwaKnxCjUPyEGIXiJ8QoFD8hRqH4CTEK\nxU+IUSh+QoxC8RNilHCRJ3vrT/4Q/jthLSrjhVniPJzGU7hkmuawNhxNYG0Sx7g2cddaA7zmUX+M\nryPFf3tnjVV8HWsX8Lqw4jzue8rfec+DJd/H68IQPz4e+EztP0pnsxmu5UpNWwdr+Dr+N/7rVfvE\n5zsdXvQXf/rH+Af9BbjzE2IUip8Qo1D8hBiF4ifEKBQ/IUah+AkxykKtvvW1dVgLFXMiGbjtmqju\ntrVEROIJtvOmCbYIRzm2UOIkcx7Pc2wrJsAeFBGZjvG6oMA3xKv2YM1vuO8Jst7+s4pLig2VZ+77\noS1TbTS1hu08L8W/dZiM3B+XYgs2z1JYm/klfB2VBqwFlWVYE2SZ/s/7g/8F7vyEGIXiJ8QoFD8h\nRqH4CTEKxU+IUSh+QoyyUKtvbR0n1YadLqxVqzXn8VmmWGyC7R9fS7EpDorvu9flM2URdqgkS7Gl\n5I0GsBaMWvhDm9vuzwsCuKRQbUCF57CbPMVWLAf491zP+7DW8DuwVnhuqy8Rd1JURGQMUqQiIj0l\nEdpP8PXHEbYBoyNnnMcrzaNwjfi/vHS58xNiFIqfEKNQ/IQYheInxCgUPyFGWejbfvS2XER/y16q\nVJ3HJ0P3m1wRkVz5u+Ypb0pLZdxLMJq6385HAQ4KlQKlT5/ytjxPcWgmGOK3214B1vlKj0Slv5/m\nA2jX73vu2skNt3MjInJ1G9c2fRwKkyl+Ox+P3C7BZIzf2nf7ODj1tI3vfauHn8e9Nv7MwzvvOY+n\nmyfhmuqRc7A2L9z5CTEKxU+IUSh+QoxC8RNiFIqfEKNQ/IQYZaFWX64EcaIaDj54aJ3/nOEdZcyU\nH+IATA5GRnlKsKeiBGoCxUgrlBFUEmNLyZ8OwYXU8bnwmf6bnnv4GneW3d/tdy6vwTUnNnFtpvRW\nnE7w/Zgl7h6KsTKWrT/EoaruAAeMDrt43doBDmPd2zt0Hj/oHsA1/WEb1uaFOz8hRqH4CTEKxU+I\nUSh+QoxC8RNiFIqfEKMs1OoLApwsK5cUi23sHq1UKkVwTVjC5+o/eQprn332ANZaIJmVaW5YgMc7\nRcqf3lRJqiUtbG2Fd286j1evYhtNIndqUkRv09f0cZrxjXNN5/EzK/hcJZAEFBHJAqX3X4R/6xQY\nmV6hjEoTfI2RMleuotRqVfxjL1XdMqw8xs/OgwOcLpwX7vyEGIXiJ8QoFD8hRqH4CTEKxU+IUSh+\nQoyyUKuvpKXpFE8piNyWnpbMenj/Pqz95IbbDhMRuf8EN1pEwbL1FZyYO3IU15ZBSlBEpNvC363Q\nUoTdfefxMMZptGgFj1HzZtgSu1LFqcpL226rr6o8A+pepNiAuWYRgs6wZcWW83LFdlYuMVRSjrOR\nYs8mbiu74eMmrpuNCr6QOeHOT4hRKH5CjELxE2IUip8Qo1D8hBiF4ifEKP9nrD7FrZEM2IDd1hO4\nptfuwlqkpNhKVZxU63bdzTHXQ5wqu3blAqyN+6DZpoi89c6HsHbvENuRy8Ad2hriNRXFzgsnOD12\nal1JqoGknedjG22mzDX0UvecRBG92amPUn1Ko9ZZhq9DawxbZNiai0duO09EpN8B8wQH2B6sKo1h\n54U7PyFGofgJMQrFT4hRKH5CjELxE2KUBb/tx28oswS/zY0n7jelcYz73JWqyniqCn7z2priMUgd\ncL6VEb6OrfUtWNs8cw7W0hz3b7v75tuwlqTuN85FD4+LypQ36aXOHqytXToPa77n3ldAzkZERIpC\nCduoM8WUGgxB4XMpuSlJlTf6CRgNJiIyVZ7VbOq+/5lyLv1Lzwd3fkKMQvETYhSKnxCjUPyEGIXi\nJ8QoFD8hRlmo1SdKz7opGMklIjJsuW2q9p67X52IyO4jHPr56X1cSxR7pVF2229VxXaZDXE4o769\nDWvXv/gqrKHQjIjIv/z0Y+fx2gzf31LrLqwFKQ4frTQasAbDNtjBFF/ZinItUINLUszcv2cGLFER\nkWSCLbt4jPsWTmMcCstSHJ4S8N20Xo2dLv4954U7PyFGofgJMQrFT4hRKH5CjELxE2IUip8QoyzW\n6lN6rRU5TpaVS+7LPL6zA9esbGzC2qUzeF37EI+1mqbu66/X8OikYRun6dqHOHl4fOcErF1/7Sqs\nlaZuC+jmJ3h8WePJHVjzlSTmuD+AtXzVbQN6Sp8+UcZdTZXE3HiMryMFFrIaEsyxDai4ijLLsZ03\nzZ69lkzxdXT7tPoIIc8JxU+IUSh+QoxC8RNiFIqfEKNQ/IQYZaFWXxDg01WUEVrlkttK29g6BtcU\nWoJw8uzNFEVEUtBktN3Bdt7Nm7dg7eH+DVh747fw/Rj1cFJweHjoXjPA6bwixWk0nB8Uef8D/N2C\nKHIe3z62gdco5+r18diwQyXdWau57dRGswnXVOo4euiHuNbp4hFxsdKgtj8ADWoTJXmopBLnhTs/\nIUah+AkxCsVPiFEofkKMQvETYhSKnxCjLNTq05JZoWKheGhQW4DNoVyxr8ISXheVsbmVltx2zTTF\n32t1GTe5vHfzEax997t/A2u9LrbtamX3d2sP8DV6U3yvYiXG9vGtn8PauOe2vb78lS/ANZsnjsLa\n7u4urPVaONX36hfd8xCjEn7e4hG+v/kUp/O8HO+lqdLA80nbff2xZlcrKcF54c5PiFEofkKMQvET\nYhSKnxCjUPyEGIXiJ8QoC7X67t74V1g7+dIVWEMW4UhJeqVTnNwrB9jOqy+vwlpYdqcLo4o7wSYi\n0qjj5p6h0kXy1mN3Ok9EpLSEPzMGqcSlEv47n8f4XvWVpqtJ/hTWTh1138eZMgfv0e3bsLb36Wew\n1ljbgrXOgTtx+UhJRj76DFuYDR//aGGI5ZQpCb1p5r7HnRG+V6nS7HReuPMTYhSKnxCjUPyEGIXi\nJ8QoFD8hRlno2/7jF16EtaixDGuF7/4bNXqMgzH3PrmLz1XGoY6dE8dhrbnuHgEWlLB7UKvjXnxL\nFXwddW1MVo7fOGcg8OHFOLzTzpTxVFXsLPy2EtK5/rnLzuN7Dx7ANR/fxm/ZlzewC1POlL6LIFBz\nMJ7ANT+5rTgLMV53WrnGVHFNNpruPoNDZVxXMsHXMS/c+QkxCsVPiFEofkKMQvETYhSKnxCjUPyE\nGGWhVt9s1IO1OMXhktKq20JZ3lyHa04FOGzz6OFjWHvYwdfYG7rHKh05sg3XVGpLsFZvYBuwr4Rt\n9pQecyvAFl0LcTO+IsB7wEWlr961UzhQ43tum6rXwqPNBm1872uNGqydv3IW1jJg6b1Sxfdj8+Xz\nsLanjAZrd/qw5vvYuj0NRphlij14ew9bt/PCnZ8Qo1D8hBiF4ifEKBQ/IUah+AkxCsVPiFEWavU1\njp2ANd/DVshk4ra9kiFONiUx7tEWRjhNl+R4DFKr5e4Z+FDpt3fq4mlYa6ziUV5BqPxdBiO5RETW\nlt0JsXXllx6DHnIiIisr+BpTZcxXMnLf/6liYW5u4lRcI8LJybW1FVgrInfizz94AtdUlWsMlARk\np++2gkX0sWenmm47uL6Ev3NJSX3OC3d+QoxC8RNiFIqfEKNQ/IQYheInxCgUPyFGWajV5ynjjIIQ\np/Akdo8tSmJsrYyB1SQi4im2i6dYfUOQELt9GzelvHMfp8BOnDoCa6s13DizL0qiC4zlmmljpjz8\nu6yursHachXXvMJ9HScuXIRrnnbw+LV6s4nPpTxX5ab7uar2cYIwVGznbgcnKrtjbBHmAX7oHu65\nreK+Mq4rzzmuixDynFD8hBiF4ifEKBQ/IUah+AkxCsVPiFEWavX5Pj5dPsMWWwpmsQVlJfVUwbV8\ngi2UbKAksw7c9tCgj9OFu/vYvjoY4+tIUmzlRIpXWRRuS68I8L2PFKvsyAT/Lp/+8F1Y8z33vuIr\nTUvzJm7SWQQ4iZkptlcEnoNAeT5Kis1aVuY8Crj3IiLDBF/j4dD9jIxTnCCMUzyfcF648xNiFIqf\nEKNQ/IQYheInxCgUPyFGWejb/kIJzUzBG30RkRS8zdXcg+ARDm7IRziIM32Ix0ml/YH7eILf2g89\n/J3vCQ6QVCtKjzYwkktEJCiDe6KsaSr3MXmK78dhhr/3y1/7kvN4WXF1hl38myVDfC414oKMEcUx\n8Uv4ftQaePxas4adjI4SCGoD1ydW+gVmyn2cF+78hBiF4ifEKBQ/IUah+AkxCsVPiFEofkKMslCr\nbzLGffWwqSEy2XX3wRu/+R5ck955jD8wxrZipNiR9dxtD9VnSn+8AhtRAy1gFCjhkkj5mw1ON1FG\nUD1QfpdGgn+Zq9/6Mqyd/vWrzuOdw6dwzeGn+H4M9tqwlirfrVhy229aT0OvhG3WJcXqqy3h32z2\nVLExQYAnKfCziAJczwJ3fkKMQvETYhSKnxCjUPyEGIXiJ8QoFD8hRlms1dfHltL45l1Y6//gfefx\ntNWHa2aKZZcr9punpN+WG8vO4+d893ERkSLBPQFvFYq1leCRXDVl3FgP2I6Z0i8wmGLbKK01YO3o\nENuAk3c/dB5PWu7RVCIiXgfbYd5USX0O8HNVrK84j2eKjaY+HzAmKCKK5TtTaugTNTvvlzf6uPMT\nYhaKnxCjUPyEGIXiJ8QoFD8hRqH4CTHKYq2+dz6CteTHn8Ca13PbZYViu4TLbotHRGTlwguwtvzV\n12HNf+Gs8/hAsYbO7z+BtfX33RamiMg7774Fa90OTsa1gX3oZ/gaX23ge3XpzElYK0DKUUTk8Il7\nBNVhuwvXDBQ7r9zEibm0wOsykJibKInKyRinBJOJdi5sH4YB3mdDYC/7M7wm95jqI4Q8JxQ/IUah\n+AkxCsVPiFEofkKMQvETYpSFWn0r/+y2f0RERlkJ1rKjx53HN6//BlxTfeMrsFY+fxrWUMNHEZE4\nnjiPZ0qqrNHAqbjjKbaNLitpwH/80Q9grTdyJx1XK/h77VXwHnArxBbh9tlNWFvbWHUeL/VxErPW\nwzVfGV1YXcGpyiGYr9jr49l5Q8Xqm0y1NCC2PgNPsfo895fzfeVcSkpwXrjzE2IUip8Qo1D8hBiF\n4ifEKBQ/IUZZ6Nv+GW5LJ+W1LVhb+6PvOI+Hr7+GPzDC7kGR4d5zWq+16pL7zX2pgt/oR0tNWAtL\nSlglxjfr3Q/wmLLHHfdYq2qoBFKUgNQ+CFWJiHz46QNYe8lzP1rVMt5vfGVMVuHhaxwP8TW2992j\n3vb3D+CabkdxAoZKH0ql7+JEcXYGU/e6UYbX5CCw9Cxw5yfEKBQ/IUah+AkxCsVPiFEofkKMQvET\nYpSFWn2dPu7fFhx398cTEVn5/CvO455i54ky6sgLlXUK3sxtN3maPVjFwZjNzXVYu3D5Cqx9/evf\nhLVW132Pe23c92/3sAVrgZIfGYywxXb35/edx9ebEVxTjfBeVK/g36xbw585Gbltu1yxN+v1MqwF\nlSVYKyJ8s3Kl1n/otvo6LXx/0xw/V/PCnZ8Qo1D8hBiF4ifEKBQ/IUah+AkxCsVPiFEWavWVAmzX\n+Ic4SZW99+/O49Hrr+KTVbD9UygN4XzFQSnEbdd4M7yoFOJzzTLcK67fxqmz48dPwNo3v/Ft5/G/\n+/vvwzVPBri3Yqyk0fZ7PVhbA/d/o45/l1NbeGzYF17BI9Y2tjdgLQy33QUlJaj1x+tP3H0cRUQq\nDfwMR0pvyKxw78GJ8iw+HeBzzQt3fkKMQvETYhSKnxCjUPyEGIXiJ8QoFD8hRlmo1Rf6+HQzZXzS\n6M/+ynm89BK2f+RkHZYKzc5Tih6w+iTE3yuLY1h7vHsP1tbBuCsRkaM7O7B28qw7Hekp1/iX3/tz\nWOsm+PozJTm5XHUn47a2cJKxrozd2u8oFtsKbpzZWHJbi/C3FJFC2RNnat9MvK62VIO1jaa7Aexa\nGzcLTRV7eV648xNiFIqfEKNQ/IQYheInxCgUPyFGofgJMcpirb4Any5XbKNk95Hz+Oiv/wGuqX3n\nd2HNq+EZeZoFJN6z/63MptgqO3fxAqwtNbHVlyQ4addcdSfcfjPATSm9AH+vf/rRm7BWi/uwtrbk\nbnSZgyaoIiKTHJZkr4ObWbZGu7C22XRfx84xnARcquLnQ7UBA5xYrB0B6UIRufLCrzmPl04/gWt+\n9rMPYG1euPMTYhSKnxCjUPyEGIXiJ8QoFD8hRqH4CTHKglN9+G9NocSliqm70eX4+9jqq17/PKwF\n187jcykz3ATagNgeXKrj2W6eYr/NlCaSUsKJrpUVd5rx/AU8C3Fz6w9g7cqla7D29t9+D9b273zs\nPB6VB3CNF+Bmp2ptjO/HcASenSles76KG4luncb38fL1L8FaY/sUrAmYHXlpgO3NzwH7+1ngzk+I\nUSh+QoxC8RNiFIqfEKNQ/IQYZaFv+wNlTNZMeWM+y0Gti4Ml8Y2PYK12Fff+07I7KHukhYHCMn6j\nr/USVANGimsSofFgSpgJfjEReeHFF2GtVP59WPu3t3/oPP7gJg6kpC08/mtJGb9WjfAYOA/0jRyH\nTbjm7Mtfg7WLr70Ga+Uq7tOXpNjNyjN0//H3OrFzEtbmhTs/IUah+AkxCsVPiFEofkKMQvETYhSK\nnxCjLNTqKzzN28J2E7K90hzbJ+Mf34C16u99A5+rie0amPnR2v55SlDIVxZqTp9SQ+34SkqfvnIJ\nW7DHjh+BtVqtCmtP9/edx70KtthGBw/xuSJsma6u4358Ydltl+1cwyGccBOPQxvhyWASZ3ikmGr1\ngdFbwxEO9vT7OCB16dpLsPaLcOcnxCgUPyFGofgJMQrFT4hRKH5CjELxE2IUr1ASXYSQ/79w5yfE\nKBQ/IUah+AkxCsVPiFEofkKMQvETYhSKnxCjUPyEGIXiJ8QoFD8hRqH4CTEKxU+IUSh+QoxC8RNi\nFIqfEKNQ/IQYheInxCgUPyFGofgJMQrFT4hRKH5CjELxE2IUip8Qo/wH7tUtn6PX4ZcAAAAASUVO\nRK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fc17e0e6a58>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "example=3\n",
+    "example=373\n",
     "plt.imshow( X_test[example])\n",
     "plt.axis('off')\n",
     "\n",
-    "if sum(y_pred[example]==1)==0:\n",
+    "if sum(y_test_pred[example]==1)==0:\n",
     "    print(\"No label\")\n",
     "else:\n",
-    "    for i in np.argwhere(y_test[example]==1).flatten():\n",
-    "        print(class_indices[i])"
+    "    for i in np.argwhere(y_test_pred[example]==1).flatten():\n",
+    "        print(class_indices[i])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt('results.txt', y_pred, fmt='%d')"
+    "np.savetxt('results.txt', y_test_pred, fmt='%d')"
    ]
   },
   {
